<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:phoneNumber="true"
        android:textSize="@dimen/dim_16sp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_btn"
        android:id="@+id/buttonSpotify"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@color/main_color"
        android:onClick="showToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_btn"
        android:id="@+id/buttonScores"
        android:layout_below="@+id/buttonSpotify"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@color/main_color"
        android:onClick="showToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app_btn"
        android:id="@+id/buttonLibrary"
        android:layout_below="@+id/buttonScores"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@color/main_color"
        android:onClick="showToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_btn"
        android:id="@+id/buttonBigger"
        android:layout_below="@+id/buttonLibrary"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@color/main_color"
        android:onClick="showToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_btn"
        android:id="@+id/buttonXyz"
        android:layout_below="@+id/buttonBigger"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@color/main_color"
        android:onClick="showToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_app_btn"
        android:id="@+id/buttonMyApp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/buttonXyz"
        android:longClickable="true"
        android:textColor="@color/black"
        android:background="@color/secondary_color"
        android:onClick="showToast"/>

</RelativeLayout>